[package]
name = "fido_fetcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fido"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"
sha2 = "0.10"
futures = "0.3"
async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console = "0.15"
